<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/username"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.4"
            android:inputType="text"
            android:hint="@string/username_desc" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/phone"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            />
        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.4"
            android:inputType="phone"
            android:hint="@string/phone_desc" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/email"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.4"
            android:inputType="textEmailAddress"
            android:hint="@string/email_desc" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/button"
            android:layout_height="wrap_content"
            android:text="Button 1"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Button 2"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="test1"
            android:layout_weight="1"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="test2"
            android:layout_weight="1"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="test3"
            android:layout_weight="1"/>


    </LinearLayout>
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayout">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test4"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test5"
            />

    </com.google.android.material.tabs.TabLayout>

</LinearLayout>

